# iebpr-abm

./: .editorconfig  .gitignore  .pycodestyle  ChangeLog  MANIFEST.in  README.md  TODO  pyproject.toml  setup.py
doc/: example.gao_trait.json  example.ipynb  example.oho_trait.json  example.pao_trait.json  example.py
iebpr/: __init__.py  util.py
iebpr/agent_template/: __init__.py  gao_state_template.json  gao_trait_template.json  oho_state_template.json  oho_trait_template.json  pao_state_template.json  pao_trait_template.json
src/: Makefile  agent_data.cpp  agent_pool.cpp  agent_subtype_base.cpp  agent_subtype_base_state_cfg.cpp  agent_subtype_base_trait_cfg.cpp  agent_subtype_gao.cpp  agent_subtype_oho.cpp  agent_subtype_pao.cpp  python_interface_agent_configs.cpp  python_interface_datastruct.cpp  python_interface_main.cpp  python_interface_simulation.cpp  randomizer.cpp  recorder.cpp  sbr_control.cpp  simulation.cpp
src/iebpr/: agent_data.hpp  agent_pool.hpp  agent_subtype_base.hpp  agent_subtype_base_state_cfg.hpp  agent_subtype_base_trait_cfg.hpp  agent_subtype_consts.hpp  agent_subtype_gao.hpp  agent_subtype_oho.hpp  agent_subtype_pao.hpp  def.hpp  env_state.hpp  error_def.hpp  python_interface_agent_configs.hpp  python_interface_datastruct.hpp  python_interface_simulation.hpp  python_interface_util.hpp  randomizer.hpp  recorder.hpp  sbr_control.hpp  signal.hpp  simulation.hpp  timer.hpp
